@@ -14,6 +14,7 @@ Fixed bug 2056318 - False positive for AvoidInstantiatingObjectsInLoops
 Optimizations and false positive fixes in PreserveStackTrace
 @SuppressWarnings("all") disables all warnings
 All comment types are now stored in ASTCompilationUnit, not just formal ones
+Fixed false negative in UselessOverridingMethod
 
 New rule:
 	Basic ruleset:	EmptyInitializer
